# jessie

./: README.md
jessie/: Cargo.toml
jessie-assets/: jessielogo.kra  jessielogonewfull.kra  jessilogonew.kra
jessie-crates/jessie/: Cargo.toml
jessie-crates/jessie-build/: Cargo.toml
jessie-crates/jessie-build/src/: generated.rs  lib.rs
jessie-crates/jessie-cli/: Cargo.toml
jessie-crates/jessie-cli/src/: main.rs
jessie-crates/jessie-cli/src/create_new_project/: buildtemplate.rs  generatedmain.rs  mod.rs
jessie-crates/jessie-css/: Cargo.toml
jessie-crates/jessie-css/src/: lib.rs
jessie-crates/jessie-css/src/tests/: mod.rs
jessie-crates/jessie-css/src/tests/test_comment_consuming/: mod.rs
jessie-crates/jessie-css/src/tests/test_consume_string_token/: escaping.css  mod.rs
jessie-crates/jessie-css/src/tests/test_escape_code_point/: mod.rs
jessie-crates/jessie-css/src/tests/test_string_to_number/: mod.rs
jessie-crates/jessie-lib/: Cargo.toml
jessie-crates/jessie-lib/src/: appinfo.rs  lib.rs
jessie-crates/jessie-lib/src/eventloop/: mod.rs
jessie-crates/jessie-lib/src/eventloop/renderer/: mod.rs
jessie-crates/jessie-lib/src/eventloop/renderer/miniquad/: mod.rs
jessie-crates/jessie-lib/src/eventloop/run/: mod.rs
jessie-crates/jessie-lib/src/expectation/: mod.rs
jessie-crates/jessie-lib/src/layoutinfo/: mod.rs
jessie-crates/jessie-lib/src/layoutprovider/: mod.rs
jessie-crates/jessie-macros/: Cargo.toml
jessie-crates/jessie-macros/src/: lib.rs
jessie-crates/jessie-opengl/: Cargo.toml
jessie-crates/jessie-sdl/: Cargo.toml
jessie-crates/jessie-traits/: Cargo.toml
jessie-crates/jessie/src/: create-new-project.rs  main.rs
jessie-website/: package-lock.json  package.json  tsconfig.json
jessie-website/src/: app.html
jessie-website/src/routes/: +page.svelte
