[package]
name = "jessie-build"
version = "0.1.3"
edition = "2024"
description = "The library that sets up Jessie apps for build."
homepage = "https://jessie.rs"
license = "MIT"
repository = "https://github.com/jessie-framework/jessie"

[dependencies]
jessie-lib = "0.1.5"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
