[package]
name = "jessie-lib"
version = "0.1.10"
edition = "2024"
description = "The essential library for the Jessie UI framework."
homepage = "https://jessie.rs"
license = "MIT"
repository = "https://github.com/jessie-framework/jessie"

[dependencies]
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
