[package]
name = "jessie-lib"
version = "0.1.11"
edition = "2024"
description = "The essential library for the Jessie UI framework."
homepage = "https://jessie.rs"
license = "MIT"
repository = "https://github.com/jessie-framework/jessie"

[dependencies]
gl = "0.14.0"
jessie-macros = "0.1.1"
ron = "0.10.1"
sdl2 = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
