[package]
name = "jessie-lib"
version = "0.1.11"
edition = "2024"
description = "The essential library for the Jessie UI framework."
homepage = "https://jessie.rs"
license = "MIT"
repository = "https://github.com/jessie-framework/jessie"

[dependencies]
jessie-macros = "0.1.1"
miniquad = { version = "0.4.8", optional = true }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["miniquad"]
miniquad = ["dep:miniquad"]
