[package]
name = "jessie-macros"
version = "0.1.1"
edition = "2024"
description = "The macros used by the Jessie UI framework."
homepage = "https://jessie.rs"
license = "MIT"
repository = "https://github.com/jessie-framework/jessie"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[lib]
proc-macro = true
